--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/e2e-boilerplate/puppeteer-commonjs-jest-expect/issues"
-  },
   "dependencies": {
     "jest": "26.6.3",
     "puppeteer": "5.5.0"
   },
-  "description": "Puppeteer end-to-end test automation boilerplate. Using Commonjs, Jest and Expect.",
+  "description": "Vamstar tender details assertion test cases",
   "devDependencies": {
     "eslint": "7.13.0",
     "eslint-config-airbnb-base": "14.2.1",
@@ -19,42 +15,20 @@
     "prettier": "2.1.2",
     "pretty-quick": "3.1.0"
   },
-  "homepage": "https://github.com/e2e-boilerplate/puppeteer-commonjs-jest-expect#readme",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged --allow-empty"
     }
   },
-  "keywords": [
-    "commonjs",
-    "expect",
-    "jest",
-    "puppeteer",
-    "puppeteer automation",
-    "puppeteer boilerplate",
-    "puppeteer example",
-    "e2e",
-    "e2e tests",
-    "boilerplate",
-    "integration test",
-    "test automation",
-    "javascript"
-  ],
-  "license": "MIT",
   "lint-staged": {
     "*.{js}": [
       "eslint --fix",
       "prettier --write"
     ]
   },
-  "name": "puppeteer-commonjs-jest-expect",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/e2e-boilerplate/puppeteer-commonjs-jest-expect.git"
-  },
   "scripts": {
     "lint": "npx eslint --ext .js ./ --fix",
-    "test": "jest"
+    "test": "npx jest"
   },
   "version": "1.0.0"
 }
